# XFeed

./: CMakeLists.txt  Icons.qrc  LICENSE  XCommon.h  addchannel.cpp  addchannel.h  addchannel.ui  addfolder.cpp  addfolder.h  addfolder.ui  channelbehaviorregistry.cpp  channelbehaviorregistry.h  channelfactory.cpp  channelfactory.h  channelinfo.cpp  channelinfo.h  channelmodelbuilder.cpp  channelmodelbuilder.h  db.json  displaystrategy.cpp  displaystrategy.h  main.cpp  mediaplayerdisplaystrategy.cpp  mediaplayerdisplaystrategy.h  tableviewdisplaystrategy.cpp  tableviewdisplaystrategy.h  xfeed.cpp  xfeed.h  xfeed.ui  xfeedch.cpp  xfeedch.h  xfeedchannel.cpp  xfeedchannel.h  xfeedfolder.cpp  xfeedfolder.h  xfeedmodel.cpp  xfeedmodel.h  xfeedreader.cpp  xfeedreader.h  xfeedtest_channelinfo.cpp  (+5 more)
tests/: xfeedtest.cpp  xfeedtest.h
